style: fixed respsonsive stlye to prevent overflow

--- a/src/components/BlogPostPreview.css
+++ b/src/components/BlogPostPreview.css
@@ -1,3 +1,3 @@
 .heroImage img {
-	@apply h-full;
+	@apply h-full object-cover;
 }
